--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -119,22 +119,22 @@ h6, h5{
 }
 #cancha {
   background-image: url(../img/app/duenio.jpg);
-  background-position: center;
+  background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
   width: 100%;
-  height: 535px
+   height: 555px 
 }
 #formCancha{
   background: rgba(255, 254, 254, 0.61);
-  padding:2px 0 10px 0 ;
+  /* padding:2px 0 10px 0 ;
    cursor:pointer;
-   display:block;
-   width:400px;
-   margin: 0 auto;
-   margin-left: auto;
-  margin-right: auto;
+   display:block; */
+   /* width:400px; */
+   /* margin: 0 auto; */
+   /* margin-left: auto;
+  margin-right: auto; */
 }
 #modalCancha-header{
   color:black;
