modificacion perfil usuario

--- a/src/views/paginas/carga.hbs
+++ b/src/views/paginas/carga.hbs
@@ -1,4 +1,4 @@
-<meta http-equiv="refresh" content= "3; URL=/paginas/inicio"/>
+<meta http-equiv="refresh" content= "3; URL=/ingreso"/>
 <div class="container-flex p-4">
     <div class="m-5" style="padding: 100px;">
         <div style="text-align: center;">
