--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -62,16 +62,13 @@
                     </div>
                     <div class="col-sm-8">
                         <div class="d-flex">
-                            <pre class="ms-2">Nombre: <u>{{user.nombre}}                </u></pre>
+                            <pre class="ms-2">Nombre: {{user.nombre}}</pre>
                         </div>
                         <div class="d-flex">
-                            <pre class="ms-2">Apellido: <u>{{user.apellido}}              </u></pre>
+                            <pre class="ms-2">Apellido: {{user.apellido}}</pre>
                         </div>
                         <div class="d-flex">
-                            <pre class="ms-2">Club: <u>                        </u></pre>
-                        </div>
-                        <div class="d-flex">
-                            <pre class="ms-2">Email: <u>{{user.email}}</u></pre>
+                            <pre class="ms-2">Email: {{user.email}}</pre>
                         </div>
                     </div>
                 </div>
