--- a/src/views/paginas/cancha.hbs
+++ b/src/views/paginas/cancha.hbs
@@ -21,7 +21,7 @@
                     <option value="9" type="number">9</option>
                     <option value="10" type="number">10</option>
                 </select>
-                <select name="idDeporte" class="btn btn-ls btn-outline-primary" required>
+                <select name="idDeportes" class="btn btn-ls btn-outline-primary" required>
                     <option type="text" value="">Formato</option>
                     <option type="text" value="1">Fútbol 5</option>
                     <option type="text" value="2">Fútbol 7</option>
