--- a/src/views/paginas/cancha.hbs
+++ b/src/views/paginas/cancha.hbs
@@ -122,9 +122,9 @@
                     Cargar
                 </button>
         </form>
-        <button onclick="location.href='/paginas/duenio'" class="btn btn-danger btn-block">
+        <a href="javascript: history.go(-1)" type="button" class="btn btn-danger btn-block">
             Cancelar
-        </button>
+        </a>
     </div>
 </div>
 </div>
